Updated Presentation for 1st day of class
Just a few minor tweaks

--- a/Presentations/Unit_0_Course_Information/Intro_to_Statistics.html
+++ b/Presentations/Unit_0_Course_Information/Intro_to_Statistics.html
@@ -12,7 +12,6 @@ class: center, middle, inverse, title-slide
 
 # Introduction to Statistics
 ### Anthony Tyler
-### 07/25/2018 (updated: 07/27/2018)
 
 ---
 
@@ -46,7 +45,7 @@ class: center, middle, inverse, title-slide
 
 --
 
-- All communication with the instructor should be done using the Canvas messenger, or e-mail (tylera@svgs.k12.va.us).  You are expected to check Canvas messenger and your e-mail each school day.  
+- All communication with the instructor should be done using the Canvas messenger or e-mail (tylera@svgs.k12.va.us).  You are expected to check Canvas messenger and your e-mail each school day.  
 
 ---
 # What will this course be like? 
@@ -154,6 +153,12 @@ class: center, inverse, middle
 
 - ### Statistics studies *uncertainty*.
 
+---
+class: middle
+# The Data Science Process
+
+
+![:scale 85%](Presentation Images/DataScienceProcess.jpeg)
 ---
 # What is Data?
 
@@ -321,6 +326,24 @@ class: center
 ![](Intro_to_Statistics_files/figure-html/unnamed-chunk-4-1.png)&lt;!-- --&gt;
 Red line indicates the USA life expectancy. 
 ---
+# Two Types of Categorical Data
+
+--
+
+- **Ordinal** data is data that is categorical in nature, but has a natural order.  The differences between levels may not be known.   
+--
+
+  ![:scale 30%](Presentation Images/likert.jpg)
+
+--
+
+- **Nominal** data is data that has no distinct order. 
+--
+
+
+  What is your favorite pizza topping?
+
+---
 # Data Around You
 
 - ### Think of a potential dataset that you would be interested in analyzing
@@ -333,6 +356,9 @@ Red line indicates the USA life expectancy.
 
 - ### Read the syllabus on Canvas
 - ### Install Microsoft Office (SVGS Student Resources), R, and RStudio.
+
+---
+# Emergency Procedures
     </textarea>
 <script src="remark-latest.min.js"></script>
 <script src="custom.js"></script>
