--- a/Presentations/Unit_0_Course_Information/Intro_to_Statistics.html
+++ b/Presentations/Unit_0_Course_Information/Intro_to_Statistics.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Anthony Tyler" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
