--- a/Presentations/ggplot2_other_graphs/ggplot2_other_graphs.html
+++ b/Presentations/ggplot2_other_graphs/ggplot2_other_graphs.html
@@ -35,8 +35,8 @@ class: center, middle, inverse, title-slide
   head(state_foreign_born)
 ```
 
-<div id="htmlwidget-034dd121e7bf419f445b" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-034dd121e7bf419f445b">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50"],["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Carolina","North Dakota","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"],[3.5,7.9,13.4,4.8,27.3,9.8,14.5,9.3,20.2,10,17.7,5.7,14.2,4.9,4.8,7.1,3.6,4,3.4,15.2,16.1,6.6,8.3,2.4,4,2.1,6.8,19.3,6,22.1,9.4,22.9,7.9,3.8,4.3,6,9.9,6.5,13.5,4.8,3.2,5,17,8.2,4.5,12.2,13.7,1.6,4.8,3.8]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>state<\/th>\n      <th>percent_foreign_born<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-3b4ca86f15f3b64a9f0d" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-3b4ca86f15f3b64a9f0d">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50"],["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Carolina","North Dakota","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"],[3.5,7.9,13.4,4.8,27.3,9.8,14.5,9.3,20.2,10,17.7,5.7,14.2,4.9,4.8,7.1,3.6,4,3.4,15.2,16.1,6.6,8.3,2.4,4,2.1,6.8,19.3,6,22.1,9.4,22.9,7.9,3.8,4.3,6,9.9,6.5,13.5,4.8,3.2,5,17,8.2,4.5,12.2,13.7,1.6,4.8,3.8]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>state<\/th>\n      <th>percent_foreign_born<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 
 ---
 # Making a Histogram
@@ -53,15 +53,55 @@ ggplot(state_foreign_born,aes(x=percent_foreign_born))+
 
 ---
 # Making a Histogram
-When you ran the command, you perhaps noticed a warning
-message about the bins. `ggplot` will choose to bin your data
-into 30 bins when it makes the histogram, but you can customize
-this.  
+`ggplot` will bin your data into 30 bins, but you can customize this using either the `bins`, 
+
+
+```r
+ggplot(state_foreign_born,aes(x=percent_foreign_born))+
+* geom_histogram(bins=8)
+```
 
 ![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
 
 ---
 # Making a Histogram
+`ggplot` will bin your data into 30 bins, but you can customize this using either the `bins`, `binwidth`, 
+
+
+```r
+ggplot(state_foreign_born,aes(x=percent_foreign_born))+
+* geom_histogram(binwidth=5)
+```
+
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+---
+# Making a Histogram
+`ggplot` will bin your data into 30 bins, but you can customize this using either the `bins`, `binwidth`, or `breaks` argument.
+
+
+```r
+ggplot(state_foreign_born,aes(x=percent_foreign_born))+
+* geom_histogram(breaks=seq(0,30,5))
+```
+
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-7-1.png)&lt;!-- --&gt;
+---
+# On bin widths
+Different choices for bin widths and bin starting/ending locations can give you a histogram that looks differently. 
+
+
+---
+# Density Curve
+A density curve can be a useful tool to eliminate this drawback. 
+
+```r
+ggplot(state_foreign_born,aes(x=percent_foreign_born))+
+* geom_density(fill="red",alpha=0.5)
+```
+
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-8-1.png)&lt;!-- --&gt;
+---
+# Back to Histograms
 The default look is a little bland.  You can alter the
 outline of each bar and the fill using the color and fill
 properties.
@@ -69,11 +109,10 @@ properties.
 
 ```r
 ggplot(state_foreign_born,aes(x=percent_foreign_born))+
-  geom_histogram(binwidth=5,color="white")+
-  scale_x_continuous(limits = c(0,30))
+  geom_histogram(breaks=seq(0,30,5),color="white")
 ```
 
-![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
 
 ---
 # Making a Histogram
@@ -84,11 +123,21 @@ properties.
 
 ```r
 ggplot(state_foreign_born,aes(x=percent_foreign_born))+
-  geom_histogram(binwidth=5,color="white",fill="orangered")+
-  scale_x_continuous(limits = c(0,30))
+  geom_histogram(breaks=seq(0,30,5),color="white",fill="orangered")
 ```
 
-![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-7-1.png)&lt;!-- --&gt;
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
+---
+# Y-axis Counts vs Density
+You can choose to have counts or density for the y-axis. 
+
+
+```r
+ggplot(state_foreign_born, aes(x=percent_foreign_born,y=..density..)) +
+  geom_histogram(breaks=seq(0,30,5),color="white")
+```
+
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
 
 ---
 # Describing Distributions
@@ -121,18 +170,88 @@ we should consider four main features:
 ---
 # Approximately Symmetric
 
-![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-8-1.png)&lt;!-- --&gt;
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
 
 ---
 # Skewed Left/Right
 
 .pull-left[
-![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-13-1.png)&lt;!-- --&gt;
 ]
 
 .pull-right[
-![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-14-1.png)&lt;!-- --&gt;
 ]
+
+---
+# Shape - Modality
+
+Is there a single central peak or several separated peaks?   You should identify the peaks (modes) and the location of the peaks.
+
+.pull-left[
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-15-1.png)&lt;!-- --&gt;
+]
+
+.pull-right[
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-16-1.png)&lt;!-- --&gt;
+
+]
+
+--- 
+# Outliers
+
+Do any unusual features stick out? 
+- Are there unusual values? 
+  Values that are unsusually high or low. 
+  
+- Gaps in the data?
+
+---
+# Center
+
+Tell numerically where the center of the data is. 
+
+Common measurements of center are: 
+- Mean (symbolized with either a `$$\mu$$` for population mean or `$$\overline x$$` for a sample mean)
+- Median
+- Mode (location of peaks)
+
+---
+# Spread
+Tell (numerically) how spread out the data is.  
+
+Are values tightly clustered around the center or spread out? 
+- Standard deviation – “average“ distance between the data points and the mean
+- Inter-Quartile Range (IQR) = range of the middle 50% of the data = Q3 – Q1
+- Range = maximum – minimum (should exclude outliers if there are any)
+
+---
+# Describe the Distribution
+
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-17-1.png)&lt;!-- --&gt;
+
+---
+class:inverse,center,middle
+
+# Construct a histogram of the variable eruptions from the `faithful` dataset, and describe the distribution.
+
+---
+class: center,middle
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-18-1.png)&lt;!-- --&gt;
+
+---
+class:center,middle
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-19-1.png)&lt;!-- --&gt;
+
+---
+# Dotplots geom_dotplot()
+
+```r
+ggplot(faithful,aes(x=eruptions)) + 
+* geom_dotplot()
+```
+
+![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-20-1.png)&lt;!-- --&gt;
     </textarea>
 <script src="remark-latest.min.js"></script>
 <script src="custom.js"></script>
