--- a/Presentations/ggplot2_other_graphs/ggplot2_other_graphs.html
+++ b/Presentations/ggplot2_other_graphs/ggplot2_other_graphs.html
@@ -35,8 +35,8 @@ class: center, middle, inverse, title-slide
   head(state_foreign_born)
 ```
 
-<div id="htmlwidget-3b4ca86f15f3b64a9f0d" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-3b4ca86f15f3b64a9f0d">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50"],["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Carolina","North Dakota","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"],[3.5,7.9,13.4,4.8,27.3,9.8,14.5,9.3,20.2,10,17.7,5.7,14.2,4.9,4.8,7.1,3.6,4,3.4,15.2,16.1,6.6,8.3,2.4,4,2.1,6.8,19.3,6,22.1,9.4,22.9,7.9,3.8,4.3,6,9.9,6.5,13.5,4.8,3.2,5,17,8.2,4.5,12.2,13.7,1.6,4.8,3.8]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>state<\/th>\n      <th>percent_foreign_born<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-df6352b095015175d4ba" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-df6352b095015175d4ba">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50"],["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Carolina","North Dakota","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"],[3.5,7.9,13.4,4.8,27.3,9.8,14.5,9.3,20.2,10,17.7,5.7,14.2,4.9,4.8,7.1,3.6,4,3.4,15.2,16.1,6.6,8.3,2.4,4,2.1,6.8,19.3,6,22.1,9.4,22.9,7.9,3.8,4.3,6,9.9,6.5,13.5,4.8,3.2,5,17,8.2,4.5,12.2,13.7,1.6,4.8,3.8]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>state<\/th>\n      <th>percent_foreign_born<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 
 ---
 # Making a Histogram
@@ -194,13 +194,12 @@ Is there a single central peak or several separated peaks?   You should identify
 
 .pull-right[
 ![](ggplot2_other_graphs_files/figure-html/unnamed-chunk-16-1.png)&lt;!-- --&gt;
-
 ]
 
---- 
+---
 # Outliers
 
-Do any unusual features stick out? 
+### Do any unusual features stick out? 
 - Are there unusual values? 
   Values that are unsusually high or low. 
   
@@ -212,7 +211,7 @@ Do any unusual features stick out?
 Tell numerically where the center of the data is. 
 
 Common measurements of center are: 
-- Mean (symbolized with either a `$$\mu$$` for population mean or `$$\overline x$$` for a sample mean)
+- Mean (symbolized with either a `\(\mu\)` for population mean or `\(\overline x\)` for a sample mean)
 - Median
 - Mode (location of peaks)
 
