--- a/Presentations/Least_Squares/least-squares_regression.html
+++ b/Presentations/Least_Squares/least-squares_regression.html
@@ -102,19 +102,19 @@ class: center, middle, inverse, title-slide
 - `\(a\)` is the **y intercept**, the predicted value of *y* when *x = 0*
 
 ---
-# Relationship between mammal gestation and longevity
+# Mammal gestation and longevity
 
 
 
-<div id="htmlwidget-6d1d8e89d72a7a5efb84" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-6d1d8e89d72a7a5efb84">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40"],["baboon","bear,black","bear,grizzly","bear,polar","beaver","buffalo","camel","cat","chimpanzee","chipmunk","cow","deer","dog","donkey","elephant","elk","fox","giraffe","goat","gorilla","guinea pig","hippopotamus","horse","kangaroo","leopard","lion","monkey","moose","mouse","opposum","pig","puma","rabbit","rhinoceros","sea lion","sheep","squirrel","tiger","wolf","zebra"],[187,219,225,240,122,278,406,63,231,31,284,201,61,365,645,250,52,425,151,257,68,238,330,42,98,100,164,240,21,15,112,90,31,450,350,154,44,105,63,365],[20,18,25,20,5,15,12,12,20,6,15,8,12,12,40,15,7,10,8,20,4,25,20,7,12,15,15,12,3,1,10,12,5,15,12,12,10,16,5,15]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Animal<\/th>\n      <th>Gestation<\/th>\n      <th>Longevity<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":[2,3]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-5a5933151dc10a083637" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-5a5933151dc10a083637">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40"],["baboon","bear,black","bear,grizzly","bear,polar","beaver","buffalo","camel","cat","chimpanzee","chipmunk","cow","deer","dog","donkey","elephant","elk","fox","giraffe","goat","gorilla","guinea pig","hippopotamus","horse","kangaroo","leopard","lion","monkey","moose","mouse","opposum","pig","puma","rabbit","rhinoceros","sea lion","sheep","squirrel","tiger","wolf","zebra"],[187,219,225,240,122,278,406,63,231,31,284,201,61,365,645,250,52,425,151,257,68,238,330,42,98,100,164,240,21,15,112,90,31,450,350,154,44,105,63,365],[20,18,25,20,5,15,12,12,20,6,15,8,12,12,40,15,7,10,8,20,4,25,20,7,12,15,15,12,3,1,10,12,5,15,12,12,10,16,5,15]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Animal<\/th>\n      <th>Gestation<\/th>\n      <th>Longevity<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":[2,3]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 ---
-# Relationship between mammal gestation and longevity
+# Mammal Gestation and Longevity
 ![](least-squares_regression_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
 
 Are there any outliers?
 ---
-# Relationship between mammal gestation and longevity
+# Mammal Gestation and Longevity
 ![](least-squares_regression_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
 
 Are there any outliers?
