--- a/Presentations/Binomial_Distributions/binomial.html
+++ b/Presentations/Binomial_Distributions/binomial.html
@@ -338,6 +338,145 @@ A blind-folded marksman finds that on average he hits the target 80% of the time
 ```
 ## [1] 0.0272
 ```
+
+
+---
+# Characteristics of the Binomial Distribution
+
+Let's consider the SOCS of the Binomial Distributions. 
+
+First, let's simulate 10,000 sequences of 100 coin flips
+
+```r
+simulate &lt;- rbinom(n=10000, size=100, prob=0.5) 
+```
+
+---
+# Center
+The mean of the distribution represents the long-term average number of heads we would see if we repeated the 100 coin flips many many times.     
+
+
+
+```r
+mean(simulate)
+```
+
+--
+
+
+```
+## [1] 50.0048
+```
+
+--
+
+$$ \mu_x = n \cdot p $$
+---
+# Spread - Standard Deviation
+
+The standard deviation of the distribution represents the typical distance between observations of the random variable and the mean of the random variable. 
+
+
+
+```r
+sd(simulate)
+```
+
+--
+
+
+```
+## [1] 4.984803
+```
+
+--
+
+$$ \sigma_x = \sqrt{n \cdot p \cdot (1 - p)} $$
+---
+# Shape
+
+
+
+
+```r
+qplot(simulate,binwidth=1) + theme_light()
+```
+
+![](binomial_files/figure-html/unnamed-chunk-21-1.png)&lt;!-- --&gt;
+
+--
+
+It is true that binomial distributions SOMETIMES look approximately normal.  This is not true always.  There are certain conditions that must be met for this to be true. 
+
+---
+# Shape
+
+```r
+simulate &lt;- rbinom(n=10000,size = 20, prob = 0.05)
+qplot(simulate,binwidth=1) + theme_light()
+```
+
+![](binomial_files/figure-html/unnamed-chunk-22-1.png)&lt;!-- --&gt;
+
+---
+# Shape
+
+A *binomial distribution* is approximately normal if **there are at least 10 expected successes and failures**. 
+
+We will check: 
+    `$$np &gt;= 10$$`
+    `$$n(1-p) &gt;= 10$$`
+
+---
+# Bottled Water vs Tap Water
+
+Suppose that 21 students were involved in an experiment in which they did a blind taste test with 3 different types of water.  One of the water types was tap, and the other two were different bottled waters.   Let X = number of students who could correctly identify the tap water.   Let us assume that the students just flat out guessed on which one was the tap water. 
+
+Find the mean of x. 
+
+--
+
+$ \mu_x = np $
+$ \mu_x = 21(\frac{1}{3}) = 7 $
+
+--
+
+We would expect, on average, 7 students to guess correctly. 
+
+---
+# Bottled Water vs Tap Water
+
+Suppose that 21 students were involved in an experiment in which they did a blind taste test with 3 different types of water.  One of the water types was tap, and the other two were different bottled waters.   Let X = number of students who could correctly identify the tap water.   Let us assume that the students just flat out guessed on which one was the tap water. 
+
+Find the standard deviation of x. 
+
+--
+
+$ \sigma_x = \sqrt{np(1-p)} $
+$ \sigma_x = \sqrt{21(\frac{1}{3})(1-\frac{1}{3})} = 2.16 $
+
+
+--
+
+If the activity were repeated many times with groups of 21 students who were just guessing, the number of correct identifications would differ from 7 by an average of 2.16.
+
+---
+# Attitudes Toward Shopping
+
+A survey asked a nationwide random sample of 2500 adults if they agreed or disagreed that “I like buying new clothes, but shopping is often frustrating and time-consuming.” Suppose that exactly 60% of all adult US residents would say “Agree” if asked the same question. Let X = the number in the sample who agree. 
+
+Estimate the probability that 1520 or more of the sample agree.
+
+1. Verify that X is approximately a binomial random variable.
+
+2. Check the conditions for using a Normal approximation.
+
+3. Calculate P(X ≥ 1520) using a Normal approximation.
+
+---
+# Note about Independence
+
+We can assume independence even in cases that aren't truly independent as long as the sample isn't more than 10% of the population size.
     </textarea>
 <script src="remark-latest.min.js"></script>
 <script src="custom.js"></script>
