--- a/Presentations/Binomial_Distributions/binomial.html
+++ b/Presentations/Binomial_Distributions/binomial.html
@@ -365,7 +365,7 @@ mean(simulate)
 
 
 ```
-## [1] 50.0048
+## [1] 49.9991
 ```
 
 --
@@ -386,7 +386,7 @@ sd(simulate)
 
 
 ```
-## [1] 4.984803
+## [1] 4.962516
 ```
 
 --
@@ -436,8 +436,8 @@ Find the mean of x.
 
 --
 
-$ \mu_x = np $
-$ \mu_x = 21(\frac{1}{3}) = 7 $
+$$ \mu_x = np $$
+$$ \mu_x = 21(\frac{1}{3}) = 7 $$
 
 --
 
@@ -452,8 +452,10 @@ Find the standard deviation of x.
 
 --
 
-$ \sigma_x = \sqrt{np(1-p)} $
-$ \sigma_x = \sqrt{21(\frac{1}{3})(1-\frac{1}{3})} = 2.16 $
+$$ \sigma_x = \sqrt{np(1-p)} $$
+
+$$ \sigma_x = \sqrt{21(\frac{1}{3})(1-\frac{1}{3})} = 2.16 $$
+
 
 
 --
