--- a/Presentations/Unit_0_Course_Information/Intro-to-Statistics.html
+++ b/Presentations/Unit_0_Course_Information/Intro-to-Statistics.html
@@ -46,8 +46,6 @@ class: center, middle, inverse, title-slide
 
 - You are expected to check Canvas messenger and your e-mail each school day.  
 
---
-
 ---
 # What will this course be like? 
 
@@ -329,10 +327,7 @@ class: center
 Red line indicates the USA life expectancy. 
 ---
 
-```r
-# Didn't get past this in class
-```
-
+ &lt;!-- Didn't get past this in first class --&gt; 
 
 
 # Two Types of Categorical Data
