updated some presentations
new updated presentations

--- a/Presentations/Introduction_to_RStudio/Introduction-to-RStudio.html
+++ b/Presentations/Introduction_to_RStudio/Introduction-to-RStudio.html
@@ -4,8 +4,7 @@
     <title>Introduction to RStudio</title>
     <meta charset="utf-8">
     <meta name="author" content="Anthony Tyler" />
-    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -16,9 +15,25 @@ class: center, middle, inverse, title-slide
 
 ---
 
-# Emergency Procedures
+# Data Around You
+
+- ### Think of a potential dataset that you would be interested in analyzing
+  - #### What are the cases?
+  - #### What are the variables?
+  - #### What type of data are your variables (remember the 4 types)?
+  - #### What interesting questions could it help you answer?
 
 ---
+
+
+Recommendation to future students from a former student:
+&gt; Understand how to use RStudio very well to the point where you can easily maneuver through it so that you can focus more on the statistics material.
+
+And:
+&gt; Beginning of class information can be slightly overwhelming, as there are a lot of fundamentals to statistics that are needed to do the work for second semester. Once you progress past these early concepts, you will realize that the information will become much more useful and easy to remember for future topics.
+
+---
+
 # ![](https://cdn.datacamp.com/main-app/assets/brand/datacamp-horizontal-rgb-f2e1d0a9be07824aca4d5aeda0975757eb511b52ee3d770b3d6fcffe790d99d5.svg)
 
 --
@@ -27,19 +42,24 @@ class: center, middle, inverse, title-slide
 
 --
 
-- The first DataCamp **HW assignment** is available on [DataCamp](www.datacamp.com).  Check your e-mail for your invitation and get started!
+- The first DataCamp **HW assignment** is available on [DataCamp](www.datacamp.com).  Click on the appropriate link on Canvas to create an account and get started.  You'll need to use your SVGS e-mail account for your login. 
 
 ---
 class: inverse, middle, center
 
 # RStudio 101
+
+---
+class: middle, center
+# To learn more about the RStudio IDE, you can go through [this DataCamp tutorial](https://campus.datacamp.com/courses/working-with-the-rstudio-ide-part-1/orientation?ex=1).
     </textarea>
 <script src="remark-latest.min.js"></script>
 <script src="custom.js"></script>
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
-"countIncrementalSlides": false
+"countIncrementalSlides": false,
+"slideNumberFormat": ""
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
